--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,10 +18,23 @@ android {
         }
     }
 }
+repositories   {
+    flatDir {
+        dirs 'libs'
+    }
 
+}
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
+    compile 'com.android.support:cardview-v7:23.0.0'
+    compile 'com.android.support:recyclerview-v7:23.0.0'
+    compile(name: 'android-my-library-release', ext: 'aar')
+    compile 'com.readystatesoftware.systembartint:systembartint:1.0.4'
+    compile 'com.facebook.fresco:fresco:0.10.0'
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'com.alibaba:fastjson:1.2.14'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
